Add: Comprehensive GMC, GA4, and Google Ads content for complete newbie training curriculum

--- a/index.html
+++ b/index.html
@@ -271,16 +271,116 @@
           </div>
         </div>
         <div class="card-body" id="policies-content" hidden>
+          <h3>CHÍNH SÁCH GOOGLE SHOPPING ADS</h3>
           <ul>
-            <li>Minh bạch doanh nghiệp: thông tin liên hệ, hoàn tiền/đổi trả, điều khoản và quyền riêng tư hiển thị rõ.</li>
-            <li>Tránh sai lệch/misrepresentation: giá, tình trạng còn hàng và thuộc tính phải khớp giữa trang và feed.</li>
-            <li>Yêu cầu biên tập (Editorial): viết chuẩn, không lạm dụng viết HOA/!!!, không nhồi nhét từ khóa.</li>
-            <li>Shopping hình ảnh: không watermark/border/overlay khuyến mãi; ảnh 1024px+, nền sạch.</li>
-            <li>GTIN/MPN & biến thể: cung cấp GTIN hợp lệ; thuộc tính size/color/material đúng biến thể.</li>
-            <li>Thương hiệu & nhãn hiệu: không dùng brand đối thủ nếu không được phép; brand trong feed phải chính xác.</li>
-            <li>Nội dung nhạy cảm/giới hạn: sức khỏe/giảm cân/thuốc/bổ sung – tuân chính sách từng quốc gia.</li>
-            <li>Khuyến mãi: dùng Merchant Promotions; voucher/code và giá sau giảm phải nhất quán.</li>
+            <li>Không quảng cáo sản phẩm cấm: vũ khí, thuốc, hàng giả, nội dung 18+</li>
+            <li>Hình ảnh sản phẩm rõ ràng, không watermark/logo</li>
+            <li>Mô tả sản phẩm chính xác, không spam từ khóa</li>
+            <li>Giá cả và phí vận chuyển minh bạch</li>
+            <li>Website phải có chính sách đổi trả, vận chuyển, bảo mật</li>
+            <li>Không được lừa đảo hoặc gây hiểu nhầm cho khách hàng</li>
           </ul>
+
+          <h3>GMC LÀ GÌ?</h3>
+          <ol>
+            <li>
+              <strong>Google Merchant Center (GMC)</strong>
+              <ul>
+                <li>Nền tảng của Google để lưu dữ liệu sản phẩm (feed)</li>
+                <li>Kết nối với Google Ads → chạy Shopping Ads / Performance Max</li>
+                <li>Hiển thị sản phẩm trên Google Shopping, Search, Images</li>
+                <li>Không có GMC → không thể chạy quảng cáo Google Shopping</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Vai trò</strong>
+              <ul>
+                <li>Là "kho sản phẩm" chính thức cho Google</li>
+                <li>Nơi Google kiểm duyệt sản phẩm theo chính sách</li>
+                <li>Cầu nối giữa website ↔ quảng cáo Google</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>YÊU CẦU ĐỂ STORE ĐƯỢC DUYỆT GMC</h3>
+          <ol>
+            <li>
+              <strong>Website TMĐT đạt chuẩn (Căn cứ: Google Merchant Center Guidelines)</strong>
+              <ul>
+                <li>HTTPS (SSL) bắt buộc → bảo mật dữ liệu khách hàng</li>
+                <li>Responsive (desktop + mobile) → Google kiểm tra UX trên mobile</li>
+                <li>Checkout online hoạt động → phải hoàn tất đặt hàng giả lập</li>
+                <li>Tốc độ tải >70 điểm PageSpeed → tránh lỗi trải nghiệm trang đích</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Nội dung & chính sách minh bạch</strong>
+              <ul>
+                <li>Trang "Chính sách đổi trả" → bắt buộc (Return Policy)</li>
+                <li>Trang "Chính sách vận chuyển" → bắt buộc (Shipping Policy)</li>
+                <li>Điều khoản dịch vụ (TOS) → bắt buộc (Terms of Service)</li>
+                <li>Chính sách bảo mật (Privacy Policy) → bắt buộc (Privacy Policy)</li>
+                <li>Thông tin liên hệ thật (email, số điện thoại, địa chỉ)</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Sản phẩm tuân thủ chính sách Google Shopping Ads</strong>
+              <ul>
+                <li>Không hàng cấm: vũ khí, thuốc, hàng giả, nội dung 18+</li>
+                <li>Hình ảnh rõ, không watermark/logo</li>
+                <li>Mô tả đúng thực tế, không spam từ khóa</li>
+                <li>Giá & phí vận chuyển rõ ràng, khớp với website</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Hệ thống thanh toán</strong>
+              <ul>
+                <li>COD (nếu thị trường hỗ trợ)</li>
+                <li>Online: Visa/Mastercard, PayPal, Stripe, v.v.</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>CÁCH CHĂM STORE & GMC</h3>
+          <ol>
+            <li>
+              <strong>Chăm Store (Website)</strong>
+              <ul>
+                <li>Cập nhật sản phẩm thường xuyên → Google thích website có hoạt động mới</li>
+                <li>Tối ưu SEO on-page → giúp Google hiểu rõ sản phẩm hơn</li>
+                <li>Đảm bảo tồn kho & giá chính xác → tránh lỗi "price mismatch"</li>
+                <li>Checkout mượt, ít bước → giảm tỷ lệ bỏ giỏ</li>
+                <li>Tăng uy tín thương hiệu → logo, đánh giá khách hàng</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Chăm GMC</strong>
+              <ul>
+                <li>Feed luôn "fresh" → cập nhật daily/hourly nếu giá & tồn kho biến động nhanh</li>
+                <li>
+                  Tối ưu dữ liệu sản phẩm:
+                  <ul>
+                    <li>Title chứa từ khóa chính</li>
+                    <li>Mô tả chi tiết, lợi ích</li>
+                    <li>Ảnh đẹp, nền trắng, nhiều góc</li>
+                    <li>Đúng google_product_category</li>
+                  </ul>
+                </li>
+                <li>Theo dõi mục Diagnostics → sửa lỗi ngay khi có cảnh báo</li>
+                <li>Dùng Custom Labels → phân nhóm sản phẩm (mùa, giá, lợi nhuận)</li>
+                <li>Liên kết với Google Ads → chạy quảng cáo Shopping/PMax</li>
+                <li>Giữ tỷ lệ vi phạm = 0% → tránh suspend GMC</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Lý do phải chăm đều</strong>
+              <ul>
+                <li>Google ưu tiên tài khoản hoạt động đều → hiển thị nhiều hơn</li>
+                <li>Giảm nguy cơ bị treo tài khoản</li>
+                <li>Dữ liệu sản phẩm tốt → CPC rẻ, CTR cao, ROAS tốt</li>
+              </ul>
+            </li>
+          </ol>
         </div>
         <div class="card-sources" id="policies-sources" hidden>
           <ul class="sources">
@@ -421,7 +521,7 @@
               <strong>Expected CTR (CTR dự kiến)</strong>
               <ul>
                 <li>Tiêu đề chứa TỪ KHÓA CHÍNH (H1)</li>
-                <li>Từ quyền lực: “Cao cấp”, “Đảm bảo”, “Tiết kiệm 30%”, “5⭐”</li>
+                <li>Từ quyền lực: "Cao cấp", "Đảm bảo", "Tiết kiệm 30%", "5⭐"</li>
                 <li>Thêm ưu đãi/khẩn cấp + bằng chứng xã hội (reviews, bán chạy)</li>
                 <li>A/B test nhiều RSAs → giữ biến thể có CTR cao</li>
               </ul>
@@ -430,14 +530,14 @@
               <strong>Ad Relevance (Mức độ liên quan)</strong>
               <ul>
                 <li>Cấu trúc SKAG/nhóm chặt (1 loại SP/nhóm)</li>
-                <li>Từ khóa tìm thấy gì → tiêu đề nói đúng “điều đó”</li>
+                <li>Từ khóa tìm thấy gì → tiêu đề nói đúng "điều đó"</li>
                 <li>Không trộn nhiều loại SP trong cùng ad group (khó kiểm soát CPC)</li>
               </ul>
             </li>
             <li>
               <strong>Landing Page Experience (Trải nghiệm trang đích)</strong>
               <ul>
-                <li>“3 giây đầu”: nhìn thấy cùng tiêu đề/từ khóa + nút MUA rõ</li>
+                <li>"3 giây đầu": nhìn thấy cùng tiêu đề/từ khóa + nút MUA rõ</li>
                 <li>Trang tùy biến theo từ khóa (ví dụ PCOS weight loss → nội dung bám intent)</li>
                 <li>Mobile first, tải &lt; 2.5s, bảo mật, UI rõ ràng</li>
                 <li>Nội dung bổ sung theo intent (FAQ, lợi ích, chứng thực)</li>
@@ -485,7 +585,7 @@
             <li>
               <strong>Merchant Center Performance</strong>
               <ul>
-                <li>Shipping: nhanh/ổn định, estimate “dư giả” (under-promise, over-deliver)</li>
+                <li>Shipping: nhanh/ổn định, estimate "dư giả" (under-promise, over-deliver)</li>
                 <li>Returns: 30–60 ngày, quy trình dễ, miễn phí nếu cho phép</li>
                 <li>Browsing: điểm trải nghiệm duyệt ≥90 (tốc độ, điều hướng rõ)</li>
                 <li>Purchase: hoàn tất thanh toán ≥95%, bảo mật, mobile-optimized</li>
@@ -547,7 +647,7 @@
             <li>Manual CPC / Maximize Clicks → Target ROAS (sau ≥30 conversions)</li>
             <li>Budget = CPC ước tính × 10</li>
             <li>Priority: High (campaign mới)</li>
-            <li>Location: “In or regularly in”</li>
+            <li>Location: "In or regularly in"</li>
             <li>Tắt Search Partners lúc mới chạy</li>
             <li>Device: loại trừ Tablets sau launch</li>
           </ul>
@@ -643,13 +743,139 @@
           </div>
         </div>
         <div class="card-body" id="do-luong-content" hidden>
-          <ul>
-            <li>Search: Thêm cột Top abs. impr. share | Top impr. share | Search impr. share</li>
-            <li>Shopping: KPI → Impression share↑ | Click share↑ | ROAS↑ | Price &amp; image consistency</li>
-            <li>Báo cáo Auction Insights: đối thủ, overlap, vị trí trên</li>
-            <li>KPI Search: CTR↑ | QS≥8/10 | CPC↓ | Conv.rate↑ | Bounce↓</li>
-            <li>Công cụ hỗ trợ: Looker Studio/Sheets (SyncWith) | Ads Transparency Center | SEMrush/Ahrefs</li>
-          </ul>
+          <h3>GA4 – THEO DÕI VÀ THU THẬP DỮ LIỆU</h3>
+          <ol>
+            <li>
+              <strong>Cài đặt GA4</strong>
+              <ul>
+                <li>Tạo property GA4 trong Google Analytics</li>
+                <li>Gắn mã đo lường GA4 vào website (qua GTM hoặc trực tiếp)</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Sự kiện chuẩn Ecommerce (Enhanced Ecommerce)</strong>
+              <ul>
+                <li>view_item_list → Xem danh sách sản phẩm</li>
+                <li>select_item → Click chọn sản phẩm</li>
+                <li>view_item → Xem chi tiết sản phẩm</li>
+                <li>add_to_cart → Thêm vào giỏ</li>
+                <li>begin_checkout → Bắt đầu thanh toán</li>
+                <li>add_payment_info → Thêm thông tin thanh toán</li>
+                <li>purchase → Hoàn tất mua hàng</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Thông tin kèm theo (Event Parameters)</strong>
+              <ul>
+                <li>items (danh sách sản phẩm, ID, tên, category, brand)</li>
+                <li>value (tổng giá trị đơn hàng)</li>
+                <li>currency (USD, VND…)</li>
+                <li>transaction_id (ID đơn hàng duy nhất)</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Conversion</strong>
+              <ul>
+                <li>Đánh dấu các event chính là Conversion (VD: purchase)</li>
+                <li>GA4 sẽ ghi nhận để báo cáo và đồng bộ sang Google Ads</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>LIÊN KẾT GA4 ↔ GOOGLE ADS</h3>
+          <ol>
+            <li>
+              <strong>Kết nối tài khoản</strong>
+              <ul>
+                <li>GA4: Admin → Product Links → Google Ads → Link</li>
+                <li>Chọn tài khoản Google Ads cần kết nối</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Đồng bộ dữ liệu</strong>
+              <ul>
+                <li>GA4 → Google Ads: Gửi Conversion để Ads tối ưu</li>
+                <li>Google Ads → GA4: Gửi click, cost, từ khóa về để phân tích</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Import Conversion vào Google Ads</strong>
+              <ul>
+                <li>Google Ads → Tools → Conversions → Import from GA4</li>
+                <li>Chọn các event đã đánh dấu Conversion trong GA4</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>GOOGLE ADS – CHẠY QUẢNG CÁO</h3>
+          <ol>
+            <li>
+              <strong>Cấu trúc chiến dịch</strong>
+              <ul>
+                <li>Campaign (Shopping, Search, Performance Max…)</li>
+                <li>Ad Group (nhóm quảng cáo)</li>
+                <li>Ads (mẫu quảng cáo)</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Chỉ số đo lường</strong>
+              <ul>
+                <li>Impressions → Số lần hiển thị</li>
+                <li>Clicks → Số lượt click</li>
+                <li>CTR = Clicks / Impressions</li>
+                <li>CPC = Cost / Clicks</li>
+                <li>Conversions → Số lượng mua hàng</li>
+                <li>CPA = Cost / Conversions</li>
+                <li>ROAS = Doanh thu / Chi phí quảng cáo × 100%</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Chiến lược bid</strong>
+              <ul>
+                <li>Manual CPC / ECPC</li>
+                <li>Maximize Conversions</li>
+                <li>tROAS (Target Return On Ad Spend)</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Tối ưu chiến dịch</strong>
+              <ul>
+                <li>Dựa vào dữ liệu Conversion từ GA4</li>
+                <li>Tăng ngân sách cho nhóm sản phẩm ROAS cao</li>
+                <li>Giảm hoặc dừng nhóm ROAS thấp</li>
+                <li>Thêm Negative Keywords để lọc click không liên quan</li>
+                <li>Test A/B hình ảnh, tiêu đề, giá</li>
+              </ul>
+            </li>
+          </ol>
+
+          <h3>PHÂN TÍCH & BÁO CÁO</h3>
+          <ol>
+            <li>
+              <strong>Trong GA4</strong>
+              <ul>
+                <li>Báo cáo Acquisition → Nguồn traffic và hiệu suất</li>
+                <li>Báo cáo Monetization → Doanh thu theo sản phẩm</li>
+                <li>Báo cáo Funnel → Tỉ lệ rớt từng bước</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Trong Google Ads</strong>
+              <ul>
+                <li>Báo cáo từ khóa → Từ khóa hiệu quả nhất</li>
+                <li>Báo cáo thiết bị → Mobile / Desktop</li>
+                <li>Báo cáo vị trí → Thành phố, khu vực hiệu quả</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Dashboard tổng hợp</strong>
+              <ul>
+                <li>Kết hợp GA4 + Ads trong Looker Studio</li>
+                <li>Theo dõi real-time ROAS, CTR, CPA</li>
+                <li>Dùng để ra quyết định nhập hàng, tăng ngân sách, tối ưu sản phẩm</li>
+              </ul>
+            </li>
+          </ol>
         </div>
         <div class="card-sources" id="do-luong-sources" hidden>
           <ul class="sources">
@@ -734,7 +960,7 @@
             <li>Hiển thị đánh giá/sao hợp lệ: Google Customer Reviews hoặc nguồn tích hợp GMC.</li>
             <li>UGC: xin phép, minh bạch tài trợ; dùng testimonial ngắn, nêu kết quả cụ thể (không phóng đại).</li>
             <li>Schema dữ liệu có cấu trúc (Product, AggregateRating) để tăng độ tin cậy trên web.</li>
-            <li>Dùng social hooks: “trước–sau”, unboxing, FAQ ngắn; kêu gọi hành động rõ.</li>
+            <li>Dùng social hooks: "trước–sau", unboxing, FAQ ngắn; kêu gọi hành động rõ.</li>
           </ul>
         </div>
         <div class="card-sources" id="social-proof-sources" hidden>
@@ -758,7 +984,7 @@
         </div>
         <div class="card-body" id="feed-health-content" hidden>
           <ul>
-            <li>Diagnostics: theo dõi item disapproved, warnings, và tỷ lệ “eligible to serve”.</li>
+            <li>Diagnostics: theo dõi item disapproved, warnings, và tỷ lệ "eligible to serve".</li>
             <li>Item-level quality: điền <code>item_group_id</code> cho biến thể; thuộc tính bắt buộc theo danh mục (Apparel vs. Others).</li>
             <li>Automatic improvements: bật cập nhật giá &amp; tình trạng tự động nếu hạ tầng site ổn định.</li>
             <li>Structured data: đồng bộ schema (Product, Offer) để Google crawl so khớp với feed.</li>
@@ -956,7 +1182,7 @@
             <li>D0–D2: Audit nhanh (search terms, auction insights, feed thuộc tính, GMC score)</li>
             <li>D3–D5: Viết lại tiêu đề feed theo công thức; bổ sung gender/age/product_type/GTIN</li>
             <li>D6–D7: Tạo/siết ad groups (SKAG hoặc nhóm chặt); viết RSA bám keyword</li>
-            <li>D8–D9: Tạo landing page biến thể cho từ khóa trọng điểm (3 giây đầu = “đúng chỗ”)</li>
+            <li>D8–D9: Tạo landing page biến thể cho từ khóa trọng điểm (3 giây đầu = "đúng chỗ")</li>
             <li>D10–D11: Cấu hình custom labels; chia ngân sách theo lợi nhuận/hiệu suất/mùa vụ</li>
             <li>D12: Kiểm tra Merchant Center (shipping/returns/browsing/purchase/reviews)</li>
             <li>D13: Thiết lập theo dõi &amp; dashboard (SyncWith → Sheets → Looker Studio)</li>
